<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".FarmerRegActivity">

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:hint="@string/username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/ed_password"
        android:layout_below="@id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/ed_pwd"
        android:layout_below="@id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:hint="@string/reenter_password"
        android:inputType="textPassword"/>


        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_below="@+id/ed_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_farmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="90dp"
                android:checked="true"
                android:text="@string/farmer"/>

            <RadioButton
                android:id="@+id/rbtn_restaurant"
                android:layout_toRightOf="@id/rbtn_farmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:text="@string/restaurant"/>
        </RadioGroup>


    <Button
        android:id="@+id/btn_register"
        android:layout_below="@id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="110dp"
        android:background="@android:color/black"
        android:textColor="#FFFFFF"
        android:text="@string/register"/>


        <TextView
            android:id="@+id/tv1"
            android:layout_below="@id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="100dp"
            android:text="@string/already_registered"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_toRightOf="@id/tv1"
            android:layout_below="@id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="5dp"
            android:text="@string/login_here"
            android:textColor="@android:color/holo_blue_light"
            android:clickable="true"/>


</RelativeLayout>