<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".AddFarmerProductsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="40dp"
            android:text="@string/choose_your_product"
            android:textColor="@android:color/black"
            android:textSize="15dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_below="@id/tv_des"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:entries="@array/Products"
        android:prompt="@string/prod_prompt"/>

        <EditText
            android:id="@+id/ed_quantity"
            android:layout_below="@id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_quantity"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_below="@id/ed_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/black"
            android:textColor="#FFFFFF"/>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_restaurantlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_restaurant_list"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/black"
        android:textColor="#FFFFFF"/>

</LinearLayout>